# SiGCoR

./: .env  .gitignore  README.md  manage.py  pyproject.toml
apps/contratos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/contratos/migrations/: 0001_initial.py  0002_alter_recebimento_item_pedido_entrega.py  0002_initial.py  0003_rename_valor_pago_pagamento_valor_and_more.py
apps/contratos/templates/contratos/: confirma_exclusao.html  cria_pedido_entrega.html  detalhe_contrato.html  form_contrato.html  form_recebimento.html  lista_contratos.html
apps/core/: apps.py  urls.py  views.py
apps/core/templates/core/: home.html  login.html
apps/estoque/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/estoque/migrations/: 0001_initial.py
apps/fornecedores/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/fornecedores/migrations/: 0001_initial.py
apps/licitacoes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/licitacoes/migrations/: 0001_initial.py  0002_licitacao_data_fim_licitacao_valor_global.py
apps/relatorios/: apps.py
apps/requisicoes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/requisicoes/migrations/: 0001_initial.py  0002_initial.py  0003_requisicao_created_at_requisicao_numero_requisicao.py  0004_remove_requisicao_created_at.py
apps/servidores/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/servidores/migrations/: 0001_initial.py
sigcor/: asgi.py  settings.py  urls.py  wsgi.py
templates/base/: base.html
(+19 files in other folders)
