[project]
name = "sigcor"
version = "0.1.0"
description = "Sistema de Gestão de Contratos de Licitação e Gestão de Requisições de material ou serviços."
authors = [
    {name = "Joaci Queiroz",email = "35443200+JoaciQueiroz@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.2.5)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-crispy-forms (>=2.5,<3.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
